# libhandlebars

./: .clang-tidy  .emacs  .gitignore  TODO  handlebars.peg  meson.build
handlebars/: handlebars.c  handlebars.h  input-context.c  internal.h  linked-list.c  linked-list.h  nary-tree.c  nary-tree.h  parser.c  parser.h  scanner.c  scanner.h  state-machine.c  state-machine.h  string.c  string.h  template-context.c  vector.c  vector.h
handlebars/scanner/: char-stream.c  char-stream.h  token-buffer.c  token-buffer.h
test/: handlebars.html  main.c  test-handlebars.c  test-parser.c  test-parser.h  test-scanner.c  test-scanner.h
